test/corpus/annotation_multiple_decimal.sdm
=============================
Annotation, Multiple Decimals
=============================

module Campaign is

  @dc:some = [ 101.0 102.201 0.1 ]

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (sequence_of_values
            (simple_value (decimal))
            (simple_value (decimal))
            (simple_value (decimal))))))))
