test/corpus/annotation_multiple_double.sdm
============================
Annotation, Multiple Doubles
============================

module Campaign is

  @dc:some = [ 3.1e+101 1.2e-10 0.01E+10 ]

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
        (qualified_identifier
          module: (identifier)
          member: (identifier)))
          value: (value
            (sequence_of_values
              element: (simple_value (double))
              element: (simple_value (double))
              element: (simple_value (double))))))))
