test/corpus/annotation_multiple_language_string.sdm
============================================
Annotation, Multiple Language-Tagged Strings
============================================

module corpus_test_annotation is

  @dc:title = [ "a rather good test"@en-GB "a test"@en-US ]

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (sequence_of_values
            element: (simple_value
              (string
                (quoted_string)
                language: (language_tag)))
            element: (simple_value
              (string
                (quoted_string)
                language: (language_tag)))))))))
