test/corpus/annotation_multiple_string.sdm
============================
Annotation, Multiple Strings
============================

module Campaign is

  @dc:author = [ "me" "and" "you" ]

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (sequence_of_values
            (simple_value
              (string
                (quoted_string)))
            (simple_value
              (string
                (quoted_string)))
            (simple_value
              (string
                (quoted_string)))))))))
