test/corpus/cardinality_exactly_one.sdm
==================================
Structure, Cardinality exactly one
==================================

module corpus_test_cardinality is

  structure Things is
    thing_1 -> integer
    thing_2 -> {1} integer
    thing_3 -> {1..1} integer
  end

end

---

(module
  (identifier)
  (module_body
    (structure_def
      (identifier)
      (structure_body
        (member
          (member_def
            (identifier)
            (type_reference
              (builtin_types))))
        (member
          (member_def
            (identifier)
            (cardinality_expression
              (unsigned))
            (type_reference
              (builtin_types))))
        (member
          (member_def
            (identifier)
            (cardinality_expression
              (unsigned)
              (cardinality_range
                (unsigned)))
            (type_reference
              (builtin_types))))))))
