test/corpus/constraint_formal_atomic_sentence.sdm
==================================
Constraint, formal atomic sentence
==================================

module Example is

  structure Outer is

    inner -> string is
      assert not_empty is
        is_empty(self)
      end
    end

  end

end

---

(module
  (identifier)
  (module_body
    (definition
      (structure_def
        (identifier)
        (structure_body
          (member
            (member_def
              (identifier)
              (type_reference
                (builtin_simple_type))
              (annotation_only_body
                (annotation
                  (constraint
                    (identifier)
                    (formal_constraint
                      (constraint_sentence
                        (simple_sentence
                          (atomic_sentence
                            (term
                              (identifier_reference
                                (identifier)))
                            (term
                              (reserved_self))))))))))))))))
