test/corpus/constraint_formal_function_composition.sdm
=======================================
Constraint, formal function composition
=======================================

module corpus_test_constraint is

  structure Outer is

    inner -> string is
      assert not_empty is
        self.is_empty()
      end
    end

  end

end

---

(module
  (identifier)
  (module_body
    (structure_def
      (identifier)
      (structure_body
        (member
          (member_def
            (identifier)
            (type_reference
              (builtin_types))
            (annotation_only_body
              (annotation
                (constraint
                  (identifier)
                  (formal_constraint
                    (constraint_sentence
                      (simple_sentence
                        (atomic_sentence
                          (term
                            (function_composition
                              (reserved_self)
                              (identifier))))))))))))))))
