test/corpus/constraint_formal_greater_than_or_equal.sdm
========================================
Constraint, formal greater than or equal
========================================

module Example is

  structure Outer is

    inner -> string is
      assert not_empty is
        inner >= "hello"
      end
    end

    inner_sym -> string is
      assert not_empty is
        inner ≥ "hello"
      end
    end

  end

end

---

(module
  (identifier)
  (module_body
    (structure_def
      (identifier)
      (structure_body
        (member
          (member_def
            (identifier)
            (type_reference
              (builtin_types))
            (annotation_only_body
              (annotation
                (constraint
                  (identifier)
                  (formal_constraint
                    (constraint_sentence
                      (simple_sentence
                        (inequation
                          (term
                            (identifier_reference
                              (identifier)))
                          (op_greater_than_or_equal)
                          (term
                            (predicate_value
                              (simple_value
                                (string
                                  (quoted_string))))))))))))))
        (member
          (member_def
            (identifier)
            (type_reference
              (builtin_types))
            (annotation_only_body
              (annotation
                (constraint
                  (identifier)
                  (formal_constraint
                    (constraint_sentence
                      (simple_sentence
                        (inequation
                          (term
                            (identifier_reference
                              (identifier)))
                          (op_greater_than_or_equal)
                          (term
                            (predicate_value
                              (simple_value
                                (string
                                  (quoted_string))))))))))))))))))
