test/corpus/datatype_with_fixed_restriction.sdm
=================================
Data Type, With Fixed Restriction
=================================

module example is

  datatype timeChanged <- dateTime {
    explicitTimezone = fixed required
  }

end

---

(module
  (identifier)
  (module_body
    (definition
      (data_type_def
        (identifier)
        (builtin_simple_type)
        (datatype_def_restriction
          (tz_restriction_facet
            (kw_is_fixed)
            (tz_restriction_value)))))))
