test/corpus/datatype_with_pattern_restriction.sdm
====================================
Data Type, With Pattern Restrictions
====================================

module corpus_test_datatype is

  datatype nameString <- string {
    pattern = [
      "A[A-Z0-9]{19}"
      "C[A-Z0-9]{19}"
      "X[A-Z0-9]{19}"
    ]
  }

end

---

(module
   (identifier)
   (module_body
     (datatype_def
       (identifier)
       (builtin_types)
       (datatype_def_restriction
         (pattern_restriction_facet
           (quoted_string)
           (quoted_string)
           (quoted_string))))))
