test/corpus/datatype_with_restrictions.sdm
============================
Data Type, With Restrictions
============================

module example is

  datatype nameString <- xsd:string is
    @xsd:maxLength = 10
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (data_type_def
        name: (identifier)
        base: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        body: (annotation_only_body
          (annotation
            (annotation_property
              name: (identifier_reference
                (qualified_identifier
                  module: (identifier)
                  member: (identifier)))
              value: (value
                (simple_value
                  (integer))))))))))
