test/corpus/dimension_from_single.sdm
==================================
Dimension, With From clause single
==================================

module corpus_test_dimension is

  dimension Things from Others with name is
    identity id -> ThingId
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (dimension_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_with
          member: (identifier)))
      body: (dimension_body
        identity: (entity_identity
          identity: (member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (identifier))))))))))
