test/corpus/dimension_from_wildcard.sdm
====================================
Dimension, With From clause wildcard
====================================

module corpus_test_dimension is

  dimension Things from Others with _ is
    identity id -> ThingId
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (dimension_def
      name: (identifier)
      from: (from_definition_clause
        mixin: (mixin_clause
          from: (identifier_reference
            (identifier))
          (mixin_with_members
            wildcard: (wildcard))))
      body: (dimension_body
        identity: (entity_identity
          identity: (member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (identifier))))))))))
