test/corpus/dimension_with_identity_and_members.sdm
====================================
Dimension, With Identity and Members
====================================

module dimensions is

  dimension Campaigns is
    identity campaign -> CampaignId
    name -> Name
    ref Target
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (dimension_def
        name: (identifier)
        body: (dimension_body
          (entity_identity
            identity: (member
              (member_def
                name: (identifier)
                target: (type_reference
                  (identifier_reference
                    (identifier))))))
          (dimension_member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (identifier)))))
          (dimension_member
            (property_ref
              property: (identifier_reference
                (identifier)))))))))
