test/corpus/dimension_with_identity_and_parents.sdm
====================================
Dimension, With Identity and Parents
====================================

module dimensions is

  dimension Campaigns is
    identity campaign -> CampaignId
    parent portfolio -> Portfolio
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (dimension_def
        name: (identifier)
        body: (dimension_body
          (entity_identity
            identity: (member
              (member_def
                name: (identifier)
                target: (type_reference
                  (identifier_reference
                    (identifier))))))
          (dimension_parent
            name: (identifier)
            parent: (identifier_reference
              (identifier))))))))
