test/corpus/dimension_with_source_and_members.sdm
==================================
Dimension, With Source and Members
==================================

module corpus_test_dimension is

  dimension Campaigns is
    source Campaign with status
    name -> Name
    ref Target
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (dimension_def
      name: (identifier)
      body: (dimension_body
        identity: (source_entity
          entity: (identifier_reference
            (identifier))
          (mixin_with_members
            member: (mixin_member
              member: (identifier))))
        (member
          (member_def
            name: (identifier)
            target: (type_reference
              (identifier_reference
                (identifier)))))
        (member
          (property_ref
            property: (identifier_reference
              (identifier))))))))
