test/corpus/entity_from_multiple.sdm
=================================
Entity, With From clause multiple
=================================

module corpus_test_entity is

  entity Thing from Others with [ name address ] is
    identity id -> ThingId
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (entity_def
      name: (identifier)
      from: (from_definition_clause
        mixin: (mixin_clause
          from: (identifier_reference
            (identifier))
          (mixin_with_members
            member: (mixin_member
              member: (identifier))
            member: (mixin_member
              member: (identifier)))))
      body: (entity_body
        identity: (entity_identity
          identity: (member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (identifier))))))))))
